testsuite/tests/typecheck/should_fail/TcNullaryTCFail.hs
{-# LANGUAGE NullaryTypeClasses #-}
module TcNullaryTCFail where

class A
instance A
instance A
