testsuite/tests/typecheck/should_fail/TcNullaryTCFail.stderr

TcNullaryTCFail.hs:5:10: error: [GHC-59692]
    Duplicate instance declarations:
      instance A -- Defined at TcNullaryTCFail.hs:5:10
      instance A -- Defined at TcNullaryTCFail.hs:6:10
